[package]
name = "tonic-async-interceptor"
authors = ["Joe Dahlquist <joe@arcanyx.com>"]
categories = ["web-programming", "network-programming", "asynchronous", "authentication"]
description = "Async variant of Tonic's interceptor function"
documentation = "https://docs.rs/tonic-async-interceptor"
edition = "2021"
homepage = "https://github.com/arcanyx-pub/tonic-async-interceptor"
keywords = ["async", "grpc", "tonic", "protobuf", "interceptor"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/arcanyx-pub/tonic-async-interceptor"
version = "0.11.0"

[dependencies]
bytes = "1.0"
http = "0.2"
http-body = "0.4.4"
pin-project = "1.1"
tonic = "0.11.0"
tower-layer = "0.3"
tower-service = "0.3"

[dev-dependencies]
tokio = {version = "1.0", features = ["rt", "macros"]}
tower = {version = "0.4.7", features = ["full"]}
